--- a/src/app/componentes/doble-tx-form/doble-tx-form.component.html
+++ b/src/app/componentes/doble-tx-form/doble-tx-form.component.html
@@ -12,7 +12,7 @@
         <p>Nivel </p>
     </div>
     <div class="text-left">
-        <button type="button" class="btn btn-outline-light " (click)="emitirEditado()">{{textos.txBt}}</button>
-        <button type="button" class="btn btn-outline-light " (click)="emitirCancel()">Cancelar</button>
+        <button type="button" class="btn btn-outline-light col-5 col-md-2" (click)="emitirEditado()">{{textos.txBt}}</button>
+        <button type="button" class="btn btn-outline-light col-5 col-md-2 mx-3" (click)="emitirCancel()">Cancelar</button>
     </div>
 </form>
