--- a/src/app/componentes/triple-tx-form/triple-tx-form.component.html
+++ b/src/app/componentes/triple-tx-form/triple-tx-form.component.html
@@ -8,6 +8,6 @@
     <div>
       <textarea name="texto3"  id="texto3" class="textEntry col-12  my-1" rows="3"  [(ngModel)]="textos.tx3" placeholder="Debe ingresar un texto"></textarea>
       </div>
-      <button type="button" class="btn btn-outline-light col-2" (click)="emitirEditado()">{{textos.txBt}}</button>
-      <button type="button" class="btn btn-outline-light col-2 mx-3"  (click)="emitirCancel()">Cancelar</button>
+      <button type="button" class="btn btn-outline-light col-5 col-md-2" (click)="emitirEditado()">{{textos.txBt}}</button>
+      <button type="button" class="btn btn-outline-light col-5 col-md-2 mx-3"  (click)="emitirCancel()">Cancelar</button>
 </form>
