--- a/src/styles.css
+++ b/src/styles.css
@@ -78,8 +78,7 @@ header .btn {
 
 .expe .caja,
 .educa .caja,
-.skills .caja,
-.desar .caja {
+.skills .caja {
 
     background: rgba(230, 81, 185, 0.1);
     border-radius: 15px;
@@ -88,7 +87,13 @@ header .btn {
     padding: 25px 50px;
     box-shadow: 0px 0px 15px 15px rgba(157, 115, 182, 0.2);
 }
-
+.desar .caja{
+    background: rgba(230, 81, 185, 0.1);
+    margin-top: 50px;
+    box-shadow: 0px 0px 15px 15px rgba(157, 115, 182, 0.2);
+    color: #aaa;
+    padding: 25px 10px;
+}
 
 .formu {
     border-radius: 15px;
